--- a/about.html
+++ b/about.html
@@ -426,7 +426,7 @@
         <div class="team-member">
           <img src="/Seika-education/suman.jpg" alt="Paudel Suman, Manager" />
           <div class="name" data-key="teamSuman">Paudel Suman</div>
-          <div class="role" data-key="teamSumanRole">Manager/Japan Representative/Language Teacher</div>
+          <div class="role" data-key="teamSumanRole">Manager/Language Teacher</div>
         </div>
         <div class="team-member">
           <img src="/Seika-education/yubraj.jpg" alt="Ghimire YubRaj, Teacher" />
