--- a/header.html
+++ b/header.html
@@ -184,7 +184,7 @@
 
 <header>
   <div class="logo">
-    <img src="/Seika-education/Logo-Seika.webp" alt="Seika Education Consultancy Logo" />
+    <img src="/Seika-education/Logo-Seika.png" alt="Seika Education Consultancy Logo" />
   </div>
 
   <div class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
