--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
 
   header .logo img {
     height: 100px;
-    max-width: 100%;
+    max-width: 70%;
     display: block; /* Ensures no extra space below image */
   }
 
@@ -122,7 +122,7 @@
 
     /* モバイルで元のヘッダーロゴを非表示にする */
     header .logo {
-      display: none;
+      display: yes;
     }
 
     /* ハンバーガーメニューを左端に移動し、ロゴの代わりにする */
