--- a/header.html
+++ b/header.html
@@ -122,7 +122,7 @@
 
     /* モバイルで元のヘッダーロゴを非表示にする */
     header .logo {
-      display: yes;
+      display: none;
     }
 
     /* ハンバーガーメニューを左端に移動し、ロゴの代わりにする */
