--- a/header.html
+++ b/header.html
@@ -192,7 +192,7 @@
     <span></span>
     <span></span>
   </div>
-
+ &nbsp;&nbsp
   <div class="language-switch" aria-live="polite">
     <button id="enBtn" class="active" aria-pressed="true">English</button>
     <span>|</span>
