--- a/header.html
+++ b/header.html
@@ -91,7 +91,7 @@
 
     .language-switch button.active {
       text-decoration: underline;
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: rgba Came from: 255, 255, 255, 0.2);
     }
 
     .language-switch span {
@@ -103,6 +103,7 @@
       flex-direction: column;
       cursor: pointer;
       padding: 10px;
+      z-index: 1100; /* Ensure hamburger is clickable */
     }
 
     .menu-toggle span {
@@ -139,7 +140,7 @@
 
       .language-switch {
         order: 2;
-        margin-left: 0;
+        margin-left: 10px; /* Gap between hamburger menu and language switcher */
         margin-right: 0;
         padding-right: 5px;
         gap: 3px;
@@ -152,7 +153,7 @@
       }
 
       nav ul {
-        display: none; /* Explicitly hide by default */
+        display: none;
         flex-direction: column;
         position: absolute;
         top: 80px;
@@ -169,7 +170,7 @@
       }
 
       nav ul.show {
-        display: flex; /* Show as flex when active */
+        display: flex;
         max-height: 300px;
         opacity: 1;
       }
@@ -271,10 +272,17 @@
         return;
       }
 
-      menuToggle.addEventListener("click", () => {
+      // Handle both click and touchstart for mobile compatibility
+      const toggleMenu = () => {
         const isExpanded = navMenu.classList.toggle("show");
         menuToggle.setAttribute("aria-expanded", isExpanded.toString());
-        console.log("Menu toggled, show class:", isExpanded); // Debugging
+        console.log("Menu toggled, show class:", isExpanded, "Event: click/touch");
+      };
+
+      menuToggle.addEventListener("click", toggleMenu);
+      menuToggle.addEventListener("touchstart", (e) => {
+        e.preventDefault(); // Prevent click event from firing after touch
+        toggleMenu();
       });
 
       // Close menu when a link is clicked
@@ -282,9 +290,12 @@
         link.addEventListener('click', () => {
           navMenu.classList.remove("show");
           menuToggle.setAttribute("aria-expanded", "false");
-          console.log("Menu closed via link click"); // Debugging
+          console.log("Menu closed via link click");
         });
       });
+
+      // Log when DOM is loaded for debugging
+      console.log("DOM loaded, menu toggle initialized");
     });
 
     // Language switcher buttons
@@ -293,7 +304,9 @@
 
     if (enBtn && jpBtn) {
       enBtn.addEventListener("click", () => switchHeaderLanguage("en"));
+      jpBtn.addEventListener("touchstart", () => switchHeaderLanguage("en"));
       jpBtn.addEventListener("click", () => switchHeaderLanguage("jp"));
+      jpBtn.addEventListener("touchstart", () => switchHeaderLanguage("jp"));
     }
   </script>
 </body>
