--- a/header.html
+++ b/header.html
@@ -91,7 +91,7 @@
 
     .language-switch button.active {
       text-decoration: underline;
-      background-color: rgba Came from: 255, 255, 255, 0.2);
+      background-color: rgba(255, 255, 255, 0.2);
     }
 
     .language-switch span {
@@ -103,7 +103,9 @@
       flex-direction: column;
       cursor: pointer;
       padding: 10px;
-      z-index: 1100; /* Ensure hamburger is clickable */
+      z-index: 1200; /* High z-index to ensure tappability */
+      touch-action: manipulation; /* Improve touch handling */
+      user-select: none; /* Prevent text selection on tap */
     }
 
     .menu-toggle span {
@@ -120,7 +122,7 @@
     }
 
     /* Media Queries for Mobile Responsiveness */
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
       header {
         padding: 10px 20px;
         flex-wrap: nowrap;
@@ -166,7 +168,7 @@
         overflow: hidden;
         border-top: 1px solid rgba(255, 255, 255, 0.2);
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-        transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, display 0s;
+        transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
       }
 
       nav ul.show {
@@ -191,7 +193,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/Seika-education/Logo-Seika.png" alt="Seika Education Consultancy Logo" />
+      <img src="./Seika-education/Logo-Seika.png" alt="Seika Education Consultancy Logo" />
     </div>
 
     <div class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
@@ -208,15 +210,17 @@
 
     <nav>
       <ul id="nav-menu">
-        <li><a href="/Seika-education/index.html" data-key="navHome">Home</a></li>
-        <li><a href="/Seika-education/index.html#services" data-key="navServices">Services</a></li>
-        <li><a href="/Seika-education/about.html" data-key="navAbout">About</a></li>
-        <li><a href="/Seika-education/index.html#contact" data-key="navContact">Contact</a></li>
+        <li><a href="./index.html" data-key="navHome">Home</a></li>
+        <li><a href="./index.html#services" data-key="navServices">Services</a></li>
+        <li><a href="./about.html" data-key="navAbout">About</a></li>
+        <li><a href="./index.html#contact" data-key="navContact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
   <script>
+    console.log("Script started at", new Date().toISOString());
+
     // Language Switcher Translations
     const headerTranslations = {
       en: {
@@ -234,79 +238,116 @@
     };
 
     function switchHeaderLanguage(lang) {
-      const currentLangData = headerTranslations[lang];
+      try {
+        console.log("Switching language to:", lang);
+        const currentLangData = headerTranslations[lang];
 
-      document.querySelectorAll('#nav-menu [data-key]').forEach(element => {
-        const key = element.getAttribute('data-key');
-        if (currentLangData[key]) {
-          element.textContent = currentLangData[key];
+        document.querySelectorAll('#nav-menu [data-key]').forEach(element => {
+          const key = element.getAttribute('data-key');
+          if (currentLangData[key]) {
+            element.textContent = currentLangData[key];
+          }
+        });
+
+        const enBtn = document.getElementById("enBtn");
+        const jpBtn = document.getElementById("jpBtn");
+
+        if (enBtn) {
+          enBtn.classList.toggle("active", lang === "en");
+          enBtn.setAttribute("aria-pressed", lang === "en");
         }
-      });
+        if (jpBtn) {
+          jpBtn.classList.toggle("active", lang === "jp");
+          jpBtn.setAttribute("aria-pressed", lang === "jp");
+        }
 
-      const enBtn = document.getElementById("enBtn");
-      const jpBtn = document.getElementById("jpBtn");
-
-      if (enBtn) {
-        enBtn.classList.toggle("active", lang === "en");
-        enBtn.setAttribute("aria-pressed", lang === "en");
+        localStorage.setItem('selectedLanguage', lang);
+      } catch (error) {
+        console.error("Language switch error:", error);
       }
-      if (jpBtn) {
-        jpBtn.classList.toggle("active", lang === "jp");
-        jpBtn.setAttribute("aria-pressed", lang === "jp");
-      }
-
-      localStorage.setItem('selectedLanguage', lang);
     }
 
     // Apply saved language on load
-    const savedLang = localStorage.getItem('selectedLanguage') || 'en';
-    switchHeaderLanguage(savedLang);
+    try {
+      const savedLang = localStorage.getItem('selectedLanguage') || 'en';
+      console.log("Applying saved language:", savedLang);
+      switchHeaderLanguage(savedLang);
+    } catch (error) {
+      console.error("Initial language load error:", error);
+    }
 
     // Hamburger Menu Toggle
     document.addEventListener('DOMContentLoaded', () => {
-      const menuToggle = document.querySelector(".menu-toggle");
-      const navMenu = document.getElementById("nav-menu");
+      try {
+        console.log("DOM fully loaded at", new Date().toISOString());
+        const menuToggle = document.querySelector(".menu-toggle");
+        const navMenu = document.getElementById("nav-menu");
 
-      if (!menuToggle || !navMenu) {
-        console.error("Menu toggle or nav menu not found in DOM");
-        return;
-      }
+        if (!menuToggle || !navMenu) {
+          console.error("Menu toggle or nav menu not found in DOM", { menuToggle, navMenu });
+          return;
+        }
 
-      // Handle both click and touchstart for mobile compatibility
-      const toggleMenu = () => {
-        const isExpanded = navMenu.classList.toggle("show");
-        menuToggle.setAttribute("aria-expanded", isExpanded.toString());
-        console.log("Menu toggled, show class:", isExpanded, "Event: click/touch");
-      };
+        // Handle both click and touchstart
+        const toggleMenu = (eventType) => {
+          try {
+            const isExpanded = navMenu.classList.toggle("show");
+            menuToggle.setAttribute("aria-expanded", isExpanded.toString());
+            console.log(`Menu toggled, show class: ${isExpanded}, Event: ${eventType}`);
+          } catch (error) {
+            console.error("Menu toggle error:", error);
+          }
+        };
 
-      menuToggle.addEventListener("click", toggleMenu);
-      menuToggle.addEventListener("touchstart", (e) => {
-        e.preventDefault(); // Prevent click event from firing after touch
-        toggleMenu();
-      });
-
-      // Close menu when a link is clicked
-      navMenu.querySelectorAll('a[href]').forEach(link => {
-        link.addEventListener('click', () => {
-          navMenu.classList.remove("show");
-          menuToggle.setAttribute("aria-expanded", "false");
-          console.log("Menu closed via link click");
+        menuToggle.addEventListener("click", () => toggleMenu("click"));
+        menuToggle.addEventListener("touchstart", (e) => {
+          e.preventDefault();
+          toggleMenu("touchstart");
         });
-      });
 
-      // Log when DOM is loaded for debugging
-      console.log("DOM loaded, menu toggle initialized");
+        // Close menu when a link is clicked
+        navMenu.querySelectorAll('a[href]').forEach(link => {
+          link.addEventListener('click', () => {
+            try {
+              navMenu.classList.remove("show");
+              menuToggle.setAttribute("aria-expanded", "false");
+              console.log("Menu closed via link click");
+            } catch (error) {
+              console.error("Menu close error:", error);
+            }
+          });
+        });
+
+        // Log initialization success
+        console.log("Hamburger menu initialized successfully");
+      } catch (error) {
+        console.error("DOMContentLoaded error:", error);
+      }
     });
 
     // Language switcher buttons
-    const enBtn = document.getElementById("enBtn");
-    const jpBtn = document.getElementById("jpBtn");
+    try {
+      const enBtn = document.getElementById("enBtn");
+      const jpBtn = document.getElementById("jpBtn");
 
-    if (enBtn && jpBtn) {
-      enBtn.addEventListener("click", () => switchHeaderLanguage("en"));
-      jpBtn.addEventListener("touchstart", () => switchHeaderLanguage("en"));
-      jpBtn.addEventListener("click", () => switchHeaderLanguage("jp"));
-      jpBtn.addEventListener("touchstart", () => switchHeaderLanguage("jp"));
+      if (enBtn && jpBtn) {
+        const switchLang = (lang) => () => switchHeaderLanguage(lang);
+        enBtn.addEventListener("click", switchLang("en"));
+        enBtn.addEventListener("touchstart", (e) => {
+          e.preventDefault();
+          switchLang("en")();
+        });
+        jpBtn.addEventListener("click", switchLang("jp"));
+        jpBtn.addEventListener("touchstart", (e) => {
+          e.preventDefault();
+          switchLang("jp")();
+        });
+        console.log("Language switcher buttons initialized");
+      } else {
+        console.error("Language buttons not found", { enBtn, jpBtn });
+      }
+    } catch (error) {
+      console.error("Language button setup error:", error);
     }
   </script>
 </body>
